swagger stub ing
