# swagger-codegen/node/wordcount_search2/api/swagger.yaml
@@ -1,26 +1,23 @@
 ---
 swagger: "2.0"
 info:
-  description: "This is a sample server Spark server.  You can find out more about\
-    \ Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).\
-    \  For this sample, you can use the api key `special-key` to test the authorization\
-    \ filters."
+  description: "Apps that count the number of specific characters"
   version: "0.0.1"
-  title: "wordcount_search2.py"
+  title: "wordcount_search2"
   termsOfService: "http://swagger.io/terms/"
   contact:
     email: "ghwlchlaks@naver.com"
   license:
     name: "Apache-2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-host: "zest3:3000"
-basePath: "/client/v2"
+host: "zest2:3000"
+basePath: "/api/v2/sparkSubmit"
 tags:
-- name: "wordcount_search2.py"
+- name: "wordcount_search2"
   description: "Apps that count the number of specific characters"
   externalDocs:
     description: "Find out more"
-    url: "http://192.168.2.13:3000"
+    url: "http://192.168.2.12:3000"
 - name: "pet"
   description: "Everything about your Pets"
   externalDocs:
@@ -29,13 +26,13 @@ tags:
 schemes:
 - "http"
 paths:
-  /sparkSubmit:
+  /wordcount_search2:
     post:
       tags:
-      - "sparkSubmit"
-      summary: "apps description"
+      - "sparkApps"
+      summary: "app meta datas"
       description: ""
-      operationId: "wordcount_search2.py"
+      operationId: "wordcount_search2"
       consumes:
       - "application/json"
       - "application/xml"
@@ -58,20 +55,7 @@ paths:
           description: "not found"
         500:
           description: "server error"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
       x-swagger-router-controller: "Spark"
-      x-is-post-method: true
-securityDefinitions:
-  petstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/api/oauth/dialog"
-    flow: "implicit"
-    scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
 definitions:
   Spark:
     type: "object"
@@ -98,16 +82,16 @@ definitions:
         type: "string"
         example: "wordcount_search.py"
     title: "A spark"
-    xml:
-      name: "Spark"
     description: "running spark"
     example:
       email: "ghwlchlaks"
       data: "AtoZ.txt"
-      parameter: "--word A"
+      parameter: "--word A--checkbox A"
       target: "email"
-      user: "ghwlchlaks@naver.com"
-      APP: "wordcount_search.py"
+      user: "Your@email.com"
+      APP: "wordcount_search2.py"
+    xml:
+      name: "Spark"
 externalDocs:
   description: "Find out more about Swagger"
   url: "http://swagger.io"
